--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,3 +28,5 @@
     // Pages 
         // Main 
             @import './pages/home';
+    // Bootstrap 
+        @import "../../node_modules/bootstrap/scss/bootstrap.scss";
